create new folder

--- a/page1/part2/index1.html
+++ b/page1/part2/index1.html
@@ -47,7 +47,17 @@
             </div>
         </nav>
     </header>
-
+    <div id="search-section" class="search-section">
+        <div class="white-background">
+            <p>SEARCH</p>
+            <form action="" class="search-part">
+                <input type="search">
+                <img src="https://frankyeah.github.io/Front-Enter/images/microphone.svg" alt="microphone">
+                <img src="https://frankyeah.github.io/Front-Enter/images/FE_search_green.png" alt="searchbar">
+            </form>
+        </div>
+        <div class="black-ground"></div>
+    </div>
     <!-- section -->
     <section id="back-first">
         <div class="main-title">
@@ -113,8 +123,8 @@
     </main>
 
     <!-- 動畫區塊 -->
-    <div class="top">
-        <div id="tops" class="top-div"><a href="#"><img class="top-icon" src="images\FE_TOP.png"></a></div>
+    <div id="top" class="top">
+        <div  class="top-div"><a href="#"><img class="top-icon" src="images\FE_TOP.png"></a></div>
     </div>
     <div  id="loadingDrawing" class="loading-drawing"></div>
     <div id="loadingAnimation" class="loading-animation">
@@ -125,8 +135,12 @@
         <P class="m-word">&nbsp;&nbsp; 0917-218-567</P>
         <P class="e-word">&nbsp;&nbsp; bbb24295234@gmail.com</P>
         <div>
-            <img class="footer-icon" src="images/new-facebook-blue.svg">
-            <img class="footer-icon" src="images/FE_line.png">
+            <a href="https://www.facebook.com/profile.php?id=100008349251709">
+                <img class="footer-icon" src="images/new-facebook-blue.svg">
+            </a>
+            <a href="https://line.me/ti/p/foaAfu3hPF">
+                <img class="footer-icon" src="images/FE_line.png">
+            </a>
         </div>
     </footer>
     <script src="js/lib.js"></script>
