update index html

--- a/page1/part3/pages/index.html
+++ b/page1/part3/pages/index.html
@@ -25,13 +25,13 @@
   <!-- header -->
   <header id="header">
     <div class="logo">
-      <a href="#">
+      <a href="./index.html">
         <img id="logo" src="../assets/images/FE_logo-4.png">
       </a>
     </div>
     <nav>
       <div>
-        <a class="nav-item" href="#">探索</a>
+        <a class="nav-item" href="./discover.html">探索</a>
       </div>
       <div>
         <a class="nav-item" href="#">技能樹</a>
@@ -141,7 +141,6 @@
     </div>
   </footer>
   <script src="../assets/js/lib.js"></script>
-  <script src="../assets/js/home.js"></script>
   <script src="../assets/js/common.js"></script>
 
 </body>
