update the page

--- a/page1/part3/pages/index.html
+++ b/page1/part3/pages/index.html
@@ -56,7 +56,7 @@
     <div class="black-ground"></div>
   </div>
   <!-- section -->
-  <section id="back-first">
+  <section class="front-secton" id="back-first">
     <div class="main-title">
       <p class="title-one">FRONT-ENTER</p>
       <p class="title-two">前端轉職資訊</p>
