--- a/page1/part3/pages/content.html
+++ b/page1/part3/pages/content.html
@@ -31,7 +31,7 @@
     </div>
     <nav>
       <div>
-        <a class="nav-item" href="./discover.html">探索</a>
+        <a class="nav-item" href="./article.html">探索</a>
       </div>
       <div>
         <a class="nav-item" href="#">技能樹</a>
