skill one and skill two layout

--- a/page1/part3/pages/article.html
+++ b/page1/part3/pages/article.html
@@ -34,7 +34,7 @@
         <a class="nav-item" href="./article.html">探索</a>
       </div>
       <div>
-        <a class="nav-item" href="#">技能樹</a>
+        <a class="nav-item" href="./skill.html">技能樹</a>
       </div>
       <div>
         <a class="nav-item" href="#">登入</a>
@@ -44,6 +44,8 @@
       </div>
     </nav>
   </header>
+
+  <!-- search- section -->
   <div id="search-section" class="search-section">
     <div class="white-background">
       <p>SEARCH</p>
@@ -114,6 +116,8 @@
   <div id="loadingAnimation" class="loading-animation">
     <div id="loadingImg" class="loading-img"></div>
   </div>
+
+  <!-- footer -->
   <footer>
     <P><a href="#">聯絡</a></P>
     <P class="m-word">&nbsp;&nbsp; 0917-218-567</P>
@@ -127,6 +131,8 @@
       </a>
     </div>
   </footer>
+
+  <!-- aisde -->
     <aside id="my-aside" style="animation: 0.9s ease 0s 1 alternate none running asiderunning">
       <img id="my-aside-img" src="../assets/images/FE_test_go.png">
     </aside>
