--- a/page1/part3/pages/index.html
+++ b/page1/part3/pages/index.html
@@ -34,7 +34,7 @@
         <a class="nav-item" href="./article.html">探索</a>
       </div>
       <div>
-        <a class="nav-item" href="#">技能樹</a>
+        <a class="nav-item" href="./skill.html">技能樹</a>
       </div>
       <div>
         <a class="nav-item" href="#">登入</a>
@@ -44,6 +44,8 @@
       </div>
     </nav>
   </header>
+
+  <!-- search- section -->
   <div id="search-section" class="search-section">
     <div class="white-background">
       <p>SEARCH</p>
@@ -63,9 +65,12 @@
       <div id="arrow-bottom"></div>
     </div>
   </section>
+
+  <!-- aisde -->
   <aside id="my-aside" style="animation: 0.9s ease 0s 1 alternate none running asiderunning">
     <img id="my-aside-img" src="../assets/images/FE_test_go.png">
   </aside>
+
   <main>
     <div class="learn-test">
       <p>想知道自己適合甚麼環境嗎?</p>
@@ -127,6 +132,8 @@
   <div id="loadingAnimation" class="loading-animation">
     <div id="loadingImg" class="loading-img"></div>
   </div>
+
+   <!-- footer -->
   <footer>
     <P><a href="#">聯絡</a></P>
     <P class="m-word">&nbsp;&nbsp; 0917-218-567</P>
