--- a/page1/part3/pages/article.html
+++ b/page1/part3/pages/article.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Front-Enter-前端轉職資訊</title>
+  <title>文章列表</title>
   <link rel="stylesheet" href="../assets/css/all.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
