--- a/page1/part3/pages/index.html
+++ b/page1/part3/pages/index.html
@@ -164,8 +164,8 @@
         </div>
         <form>
           <div class="login-inputs">
-            <input type="text" placeholder="Email" />
-            <input type="text" placeholder="******" />
+            <input type="email" placeholder="Email" required />
+            <input type="password" placeholder="******" required />
           </div>
           <p class="forget-password">忘記密碼?</p>
           <div class="login-btns">
@@ -176,6 +176,17 @@
             <button class="gmail-btn">Log In With Gmail</button>
           </div>
         </form>
+      </div>
+    </div>
+
+    <!-- 彈跳視窗 -->
+    <div class="alert-wrapper">
+      <div class="alert-container">
+        <p class="alert-title">Remind</p>
+        <p class="alert-word">
+          電子郵件已註冊，或尚未確實填寫。
+        </p>
+        <div class="alert-btn">OK</div>
       </div>
     </div>
 
