--- a/page1/part3/pages/skill.html
+++ b/page1/part3/pages/skill.html
@@ -193,18 +193,33 @@
         </div>
         <form>
           <div class="login-inputs">
-            <input type="text" placeholder="Email" />
-            <input type="text" placeholder="******" />
+            <input id="email" type="email" placeholder="Email" required>
+            <input id="password" type="password" placeholder="******" required>
           </div>
           <p class="forget-password">忘記密碼?</p>
           <div class="login-btns">
             <div class="btn-group">
-              <button class="login-btn">註冊</button>
-              <button class="login-btn">登入</button>
+              <button  type="button" id="signup" class="login-btn">
+                註冊
+              </button>
+              <button type="button" id="login" class="login-btn">
+                登入
+              </button>
             </div>
-            <button class="gmail-btn">Log In With Gmail</button>
+            <button type="button" id="gmail-btn">
+              Log In With Gmail
+            </button>
           </div>
         </form>
+      </div>
+    </div>
+
+    <!-- 彈跳視窗 -->
+    <div class="alert-wrapper">
+      <div class="alert-container">
+        <p class="alert-title">Remind</p>
+        <p class="alert-word">電子郵件已註冊，或尚未確實填寫。</p>
+        <div id="alert-btn">OK</div>
       </div>
     </div>
 
@@ -233,7 +248,14 @@
         </a>
       </div>
     </footer>
-    <script src="../assets/js/lib.js"></script>
+
+    <!-- 在 HTML 文件中直接引入 Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js">
+    </script>
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
+    <script src="../assets/js/settings.js"></script>
     <script src="../assets/js/common.js"></script>
     <script src="../assets/js/skill.js"></script>
   </body>
