--- a/page1/part3/pages/profile.html
+++ b/page1/part3/pages/profile.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>文章列表</title>
+    <title>會員中心</title>
     <link rel="stylesheet" href="../assets/css/all.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
-
   <body>
     <!-- header -->
     <header id="header">
@@ -47,52 +49,70 @@
       <div class="black-ground"></div>
     </div>
 
-    <!-- JS輪播圖 -->
-    <div class="slideshow-container">
-      <div class="mySlides">
-        <div class="slide-wrapper">
-          <div class="slide-title">蒐羅前端學校</div>
-        </div>
-        <img
-          src="https://firebasestorage.googleapis.com/v0/b/front-enter.appspot.com/o/images%2Frotate-img-3.jpg?alt=media&token=8f7f8f02-5066-452a-863c-a4e715d2657a"
-          alt="圖片 1"
-        />
-      </div>
-      <div class="mySlides">
-        <div class="slide-wrapper">
-          <div class="slide-title">蒐羅前端學校</div>
-        </div>
-        <img
-          src="https://firebasestorage.googleapis.com/v0/b/front-enter.appspot.com/o/images%2Frotate-img-2.jpg?alt=media&token=f28dbea4-af0c-4743-a75a-426198fe409e"
-          alt="圖片 2"
-        />
-      </div>
-      <div class="mySlides">
-        <div class="slide-wrapper">
-          <div class="slide-title">蒐羅前端學校</div>
-        </div>
-        <img
-          src="https://firebasestorage.googleapis.com/v0/b/front-enter.appspot.com/o/images%2Frotate-img-1.jpg?alt=media&token=059f5677-409b-4fc1-a772-baf1dece5063"
-          alt="圖片 3"
-        />
-      </div>
-    </div>
-
     <main>
-      <!--  class-item -->
-      <div class="class-wrapper">
-        <ul class="item-container container">
-          <li id="allClass" class="class-link">全部</li>
-          <li id="smallClass" class="class-link">小班制</li>
-          <li id="freeRange" class="class-link">放養制</li>
-          <li id="oneOnOne" class="class-link">一對一</li>
-        </ul>
-      </div>
+      <section class="profile-one-wrapper">
+        <div class="profile-one-title">會員中心</div>
+      </section>
 
-      <!-- class-card -->
-      <div class="card-wrapper">
-        <ul class="card-container container"></ul>
-      </div>
+      <section class="profile-two-wrapper">
+        <div class="profile-two-container">
+          <div class="user-group">
+            <button type="button" class="btn-user">個人資料</button>
+            <button type="button" class="btn-user">收藏</button>
+            <button type="button" class="btn-user" id="login-out">登出</button>
+          </div>
+          <div class="user-input">
+            <div class="user-avavtar">
+              <img  
+                id="profile-img" 
+                src="../assets/images/user-img.png" 
+                alt="使用者頭像" 
+              />
+            </div>
+            <form class="user-form">
+              <div class="input-group">
+                <label for="name">姓名</label>
+                <input
+                  type="text"
+                  id="profile-name"
+                  name="name"
+                  placeholder="請輸入姓名"
+                  disabled
+                />
+              </div>
+              <div class="input-group">
+                <label for="phone">手機</label>
+                <input
+                  type="text"
+                  id="profile-phone"
+                  name="phone"
+                  placeholder="請輸入手機"
+                  disabled
+                />
+              </div>
+              <div class="input-group">
+                <label for="email">信箱</label>
+                <input
+                  type="email"
+                  id="profile-email"
+                  name="email"
+                  placeholder="請輸入信箱"
+                  disabled
+                />
+              </div>
+              <div id="device-btn" class="change-data">
+                修改資料
+              </div>
+
+              <!-- 確認 & 取消區塊 -->
+              <div class="device-group">
+                <div id="confirm-btn" class="change-data">確認</div>
+                <div id="cancel-btn" class="change-data">取消</div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- 動畫區塊 -->
@@ -125,7 +145,6 @@
         </a>
       </div>
     </footer>
-
 
     <!-- 登入區塊 -->
     <div class="login-wrapper">
@@ -173,14 +192,16 @@
       <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
     </aside>
 
+    <!-- JS載入 -->
    <!-- 在 HTML 文件中直接引入 Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js">
+    </script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth-compat.js"></script>
-    <script src="../assets/js/settings.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
     
+    <script src="../assets/js/settings.js"></script>
     <script src="../assets/js/common.js"></script>
-    <script type="module" src="../assets/js/article.js"></script>
+    <script src="../assets/js/profile.js"></script>
   </body>
 </html>
