搜尋功能 & 收藏功能(含刪除收藏)

--- a/page1/part3/pages/index.html
+++ b/page1/part3/pages/index.html
@@ -56,9 +56,8 @@
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
-          <input type="search" />
-          <img src="../assets/images/microphone.svg" alt="microphone" />
-          <img src="../assets/images/FE_search_green.png" alt="searchbar" />
+          <input id="search-input" type="search" />
+          <img id="searchClcik" src="../assets/images/FE_search_green.png" alt="searchbar" />
         </form>
       </div>
       <div class="black-ground"></div>
