--- a/page1/part3/pages/article.html
+++ b/page1/part3/pages/article.html
@@ -39,9 +39,8 @@
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
-          <input type="search" />
-          <img src="../assets/images/microphone.svg" alt="microphone" />
-          <img src="../assets/images/FE_search_green.png" alt="searchbar" />
+          <input  id="search-input" type="search" />
+          <img id="searchClcik" src="../assets/images/FE_search_green.png" alt="searchbar" />
         </form>
       </div>
       <div class="black-ground"></div>
@@ -180,6 +179,8 @@
     <script src="../assets/js/settings.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
     
+    <!-- 引入 icon -->
+    <script src="https://kit.fontawesome.com/25467b0b27.js" crossorigin="anonymous"></script>
     <script src="../assets/js/common.js"></script>
     <script type="module" src="../assets/js/article.js"></script>
   </body>
