--- a/page1/part3/pages/profile.html
+++ b/page1/part3/pages/profile.html
@@ -41,9 +41,8 @@
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
-          <input type="search" />
-          <img src="../assets/images/microphone.svg" alt="microphone" />
-          <img src="../assets/images/FE_search_green.png" alt="searchbar" />
+          <input id="search-input" type="search" />
+          <img id="searchClcik" src="../assets/images/FE_search_green.png" alt="searchbar" />
         </form>
       </div>
       <div class="black-ground"></div>
@@ -57,59 +56,72 @@
       <section class="profile-two-wrapper">
         <div class="profile-two-container">
           <div class="user-group">
-            <button type="button" class="btn-user">個人資料</button>
-            <button type="button" class="btn-user">收藏</button>
+            <button type="button" class="btn-user" id="profileP">個人資料</button>
+            <button type="button" class="btn-user" id="favoriteP">收藏</button>
             <button type="button" class="btn-user" id="login-out">登出</button>
           </div>
-          <div class="user-input">
-            <div class="user-avavtar">
-              <img  
-                id="profile-img" 
-                src="../assets/images/user-img.png" 
-                alt="使用者頭像" 
-              />
-            </div>
-            <form class="user-form">
-              <div class="input-group">
-                <label for="name">姓名</label>
-                <input
-                  type="text"
-                  id="profile-name"
-                  name="name"
-                  placeholder="請輸入姓名"
-                  disabled
+          <div class="user-wrapper">
+            <!-- 個人資料  -->
+            <div class="user-container">
+              <div class="user-avavtar">
+                <img
+                  id="profile-img"
+                  src="../assets/images/user-img.png"
+                  alt="使用者頭像"
                 />
               </div>
-              <div class="input-group">
-                <label for="phone">手機</label>
-                <input
-                  type="text"
-                  id="profile-phone"
-                  name="phone"
-                  placeholder="請輸入手機"
-                  disabled
-                />
-              </div>
-              <div class="input-group">
-                <label for="email">信箱</label>
-                <input
-                  type="email"
-                  id="profile-email"
-                  name="email"
-                  placeholder="請輸入信箱"
-                  disabled
-                />
-              </div>
-              <div id="device-btn" class="change-data">
-                修改資料
-              </div>
+              <form class="user-form">
+                <div class="input-group">
+                  <label for="name">姓名</label>
+                  <input
+                    type="text"
+                    id="profile-name"
+                    name="name"
+                    placeholder="請輸入姓名"
+                    disabled
+                  />
+                </div>
+                <div class="input-group">
+                  <label for="phone">手機</label>
+                  <input
+                    type="text"
+                    id="profile-phone"
+                    name="phone"
+                    placeholder="請輸入手機"
+                    disabled
+                  />
+                </div>
+                <div class="input-group">
+                  <label for="email">信箱</label>
+                  <input
+                    type="email"
+                    id="profile-email"
+                    name="email"
+                    placeholder="請輸入信箱"
+                    disabled
+                  />
+                </div>
+                <div id="device-btn" class="change-data">修改資料</div>
 
-              <!-- 確認 & 取消區塊 -->
-              <div class="device-group">
-                <div id="confirm-btn" class="change-data">確認</div>
-                <div id="cancel-btn" class="change-data">取消</div>
-              </div>
-            </form>
+                <!-- 確認 & 取消區塊 -->
+                <div class="device-group">
+                  <div id="confirm-btn" class="change-data">確認</div>
+                  <div id="cancel-btn" class="change-data">取消</div>
+                </div>
+              </form>
+            </div>
+
+            <!-- 收藏列表 -->
+             <div class="favorite-container">
+              <!-- <div class="favorite-card">
+                <a href="./content.html?id=1539507974337">
+                  <img class="favorite-img" src="https://firebasestorage.googleapis.com/v0/b/front-enter.appspot.com/o/images%2Frotate-img-2.jpg?alt=media&token=f28dbea4-af0c-4743-a75a-426198fe409e" alt="收藏課程">
+                </a>
+                <p class="favorite-title">台大資訊系統訓練班</p>
+                <img class="favorite-delete" src="https://frankyeah.github.io/Front-Enter/images/rubbish-bin.svg" alt="刪除 icon">
+              </div> -->
+
+             </div>
           </div>
         </div>
       </section>
@@ -154,22 +166,21 @@
         </div>
         <form>
           <div class="login-inputs">
-            <input id="email" type="email" placeholder="Email" required>
-            <input id="password" type="password" placeholder="******" required>
+            <input id="email" type="email" placeholder="Email" required />
+            <input
+              id="password"
+              type="password"
+              placeholder="******"
+              required
+            />
           </div>
           <p class="forget-password">忘記密碼?</p>
           <div class="login-btns">
             <div class="btn-group">
-              <button  type="button" id="signup" class="login-btn">
-                註冊
-              </button>
-              <button type="button" id="login" class="login-btn">
-                登入
-              </button>
+              <button type="button" id="signup" class="login-btn">註冊</button>
+              <button type="button" id="login" class="login-btn">登入</button>
             </div>
-            <button type="button" id="gmail-btn">
-              Log In With Gmail
-            </button>
+            <button type="button" id="gmail-btn">Log In With Gmail</button>
           </div>
         </form>
       </div>
@@ -193,15 +204,14 @@
     </aside>
 
     <!-- JS載入 -->
-   <!-- 在 HTML 文件中直接引入 Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js">
-    </script>
+    <!-- 在 HTML 文件中直接引入 Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
-    
+
     <script src="../assets/js/settings.js"></script>
     <script src="../assets/js/common.js"></script>
-    <script src="../assets/js/profile.js"></script>
+    <script type="module" src="../assets/js/profile.js"></script>
   </body>
 </html>
