--- a/page1/part3/pages/content.html
+++ b/page1/part3/pages/content.html
@@ -239,12 +239,12 @@
     </div>
 
     <!-- aside -->
-    <aside
+    <!-- <aside
       id="my-aside"
       style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
       <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside>
+    </aside> -->
 
     <!-- 照片放大區塊 -->
     <div class="enlarge-wrapper"></div>
