--- a/page1/part3/pages/article.html
+++ b/page1/part3/pages/article.html
@@ -165,12 +165,12 @@
     </div>
 
     <!-- aisde -->
-    <aside
+    <!-- <aside
       id="my-aside"
       style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
       <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside>
+    </aside> -->
 
    <!-- 在 HTML 文件中直接引入 Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
