--- a/page1/part3/pages/index.html
+++ b/page1/part3/pages/index.html
@@ -72,12 +72,12 @@
     </section>
 
     <!-- aisde -->
-    <aside
+    <!-- <aside
       id="my-aside"
       style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
       <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside>
+    </aside> -->
 
     <main>
       <div class="learn-test">
