--- a/page1/part3/pages/profile.html
+++ b/page1/part3/pages/profile.html
@@ -196,12 +196,12 @@
     </div>
 
     <!-- aisde -->
-    <aside
+    <!-- <aside
       id="my-aside"
       style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
       <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside>
+    </aside> -->
 
     <!-- JS載入 -->
     <!-- 在 HTML 文件中直接引入 Firebase SDK -->
