--- a/page1/part3/pages/skill.html
+++ b/page1/part3/pages/skill.html
@@ -223,12 +223,12 @@
     </div>
 
     <!-- aisde -->
-    <aside
+    <!-- <aside
       id="my-aside"
       style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
       <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside>
+    </aside> -->
 
     <!-- footer -->
     <footer>
