--- a/page1/part3/pages/article.html
+++ b/page1/part3/pages/article.html
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="logo">
         <a href="./index.html">
-          <img id="logo" src="../assets/images/FE_logo-4.png" />
+          <img id="logo" src="../assets/images/FE_logo-4.png" alt="logo" />
         </a>
       </div>
       <nav>
@@ -29,18 +29,26 @@
           <p id="loginClick" class="nav-item">登入</p>
         </div>
         <div class="search-part">
-          <img id="Search" src="../assets/images/FE_search_green.png" />
+          <img
+            id="Search"
+            src="../assets/images/FE_search_green.png"
+            alt="搜尋"
+          />
         </div>
       </nav>
     </header>
 
     <!-- search- section -->
-    <div id="search-section" class="search-section">
+    <div id="searchSection" class="search-section">
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
-          <input  id="search-input" type="search" />
-          <img id="searchClcik" src="../assets/images/FE_search_green.png" alt="searchbar" />
+          <input id="search-input" type="search" />
+          <img
+            id="searchClcik"
+            src="../assets/images/FE_search_green.png"
+            alt="searchbar"
+          />
         </form>
       </div>
       <div class="black-ground"></div>
@@ -90,16 +98,20 @@
 
       <!-- class-card -->
       <div class="card-wrapper">
-        <ul class="card-container container"></ul>
+        <ul id="cardContainer" class="card-container container"></ul>
       </div>
     </main>
 
     <!-- 動畫區塊 -->
     <div id="top" class="top">
       <div class="top-div">
-        <a href="#"
-          ><img class="top-icon" src="../assets/images/FE_TOP.png"
-        /></a>
+        <a href="#">
+          <img
+            class="top-icon"
+            src="../assets/images/FE_TOP.png"
+            alt="動畫logo"
+          />
+        </a>
       </div>
     </div>
     <div id="loadingDrawing" class="loading-drawing"></div>
@@ -117,14 +129,18 @@
           <img
             class="footer-icon"
             src="../assets/images/new-facebook-blue.svg"
+            alt="facebook-icon"
           />
         </a>
         <a href="https://line.me/ti/p/foaAfu3hPF">
-          <img class="footer-icon" src="../assets/images/FE_line.png" />
+          <img
+            class="footer-icon"
+            src="../assets/images/FE_line.png"
+            alt="line-icon"
+          />
         </a>
       </div>
     </footer>
-
 
     <!-- 登入區塊 -->
     <div class="login-wrapper">
@@ -134,22 +150,21 @@
         </div>
         <form>
           <div class="login-inputs">
-            <input id="email" type="email" placeholder="Email" required>
-            <input id="password" type="password" placeholder="******" required>
+            <input id="email" type="email" placeholder="Email" required />
+            <input
+              id="password"
+              type="password"
+              placeholder="******"
+              required
+            />
           </div>
-          <p class="forget-password">忘記密碼?</p>
+          <p class="forget-password" id="forgetPassword">忘記密碼?</p>
           <div class="login-btns">
             <div class="btn-group">
-              <button  type="button" id="signup" class="login-btn">
-                註冊
-              </button>
-              <button type="button" id="login" class="login-btn">
-                登入
-              </button>
+              <button type="button" id="signup" class="login-btn">註冊</button>
+              <button type="button" id="login" class="login-btn">登入</button>
             </div>
-            <button type="button" id="gmail-btn">
-              Log In With Gmail
-            </button>
+            <button type="button" id="gmail-btn">Log In With Gmail</button>
           </div>
         </form>
       </div>
@@ -165,23 +180,31 @@
     </div>
 
     <!-- aisde -->
-    <!-- <aside
-      id="my-aside"
-      style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
-    >
-      <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside> -->
+    <aside id="my-aside">
+      <img
+        id="my-aside-img"
+        src="../assets/images/FE_test_go.png"
+        alt="測驗功能"
+      />
+    </aside>
 
-   <!-- 在 HTML 文件中直接引入 Firebase SDK -->
+    <!-- Test Go -->
+    <div class="testgo-wrapper">
+    </div>
+
+    <!-- 在 HTML 文件中直接引入 Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth-compat.js"></script>
     <script src="../assets/js/settings.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
-    
+
     <!-- 引入 icon -->
-    <script src="https://kit.fontawesome.com/25467b0b27.js" crossorigin="anonymous"></script>
-    <script src="../assets/js/common.js"></script>
+    <script
+      src="https://kit.fontawesome.com/25467b0b27.js"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="../assets/js/common.js"></script>
     <script type="module" src="../assets/js/article.js"></script>
   </body>
 </html>
