--- a/page1/part3/pages/contact.html
+++ b/page1/part3/pages/contact.html
@@ -29,13 +29,13 @@
           <p id="loginClick" class="nav-item">登入</p>
         </div>
         <div class="search-part">
-          <img id="Search" src="../assets/images/FE_search_green.png" />
+          <img id="Search" src="../assets/images/FE_search_green.png" alt="搜尋" />
         </div>
       </nav>
     </header>
 
     <!-- search- section -->
-    <div id="search-section" class="search-section">
+    <div id="searchSection" class="search-section">
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
@@ -102,9 +102,9 @@
     <!-- 動畫區塊 -->
     <div id="top" class="top">
       <div class="top-div">
-        <a href="#"
-          ><img class="top-icon" src="../assets/images/FE_TOP.png"
-        /></a>
+        <a href="#">
+          <img class="top-icon" src="../assets/images/FE_TOP.png"  alt="動畫logo" />
+        </a>
       </div>
     </div>
     <div id="loadingDrawing" class="loading-drawing"></div>
@@ -122,10 +122,11 @@
           <img
             class="footer-icon"
             src="../assets/images/new-facebook-blue.svg"
+            alt="facebook-icon"
           />
         </a>
         <a href="https://line.me/ti/p/foaAfu3hPF">
-          <img class="footer-icon" src="../assets/images/FE_line.png" />
+          <img class="footer-icon" src="../assets/images/FE_line.png" alt="line-icon" />
         </a>
       </div>
     </footer>
@@ -146,7 +147,7 @@
               required
             />
           </div>
-          <p class="forget-password">忘記密碼?</p>
+          <p class="forget-password" id="forgetPassword">忘記密碼?</p>
           <div class="login-btns">
             <div class="btn-group">
               <button type="button" id="signup" class="login-btn">註冊</button>
@@ -168,12 +169,15 @@
     </div>
 
     <!-- aside -->
-    <!-- <aside
+    <aside
       id="my-aside"
-      style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
-      <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside> -->
+      <img id="my-aside-img" src="../assets/images/FE_test_go.png" alt="測驗功能"/>
+    </aside>
+
+    <!-- Test Go -->
+    <div class="testgo-wrapper">
+    </div>
 
     <!-- 在 HTML 文件中直接引入 Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
@@ -182,7 +186,7 @@
     <script src="../assets/js/settings.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
 
-    <script src="../assets/js/common.js"></script>
+    <script type="module" src="../assets/js/common.js"></script>
     <script type="module" src="../assets/js/content.js"></script>
   </body>
 </html>
