--- a/page1/part3/pages/content.html
+++ b/page1/part3/pages/content.html
@@ -29,13 +29,13 @@
           <p id="loginClick" class="nav-item">登入</p>
         </div>
         <div class="search-part">
-          <img id="Search" src="../assets/images/FE_search_green.png" />
+          <img id="Search" src="../assets/images/FE_search_green.png" alt="搜尋" />
         </div>
       </nav>
     </header>
 
     <!-- search- section -->
-    <div id="search-section" class="search-section">
+    <div id="searchSection" class="search-section">
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
@@ -80,8 +80,8 @@
     <!-- content -->
     <section class="content-wrapper">
       <!-- content banner -->
-      <section class="content-one-wrapper">
-        <div class="content-one-title"></div>
+      <section id="contentWrapperOne" class="content-one-wrapper">
+        <div id="contentTitleOne" class="content-one-title"></div>
       </section>
 
       <!-- content -->
@@ -124,43 +124,43 @@
           </div>
         </div>
         <div class="text-section">
-          <p class="text-topic"></p>
-          <p class="text-description"></p>
+          <p id="textTopic" class="text-topic"></p>
+          <p id="textDescription" class="text-description"></p>
           <div class="text-content">
             <div class="text-content-container">
               <p class="content-word">整理</p>
               <div class="row-group">
                 <div class="row">
                   <div class="row-name">城市</div>
-                  <div class="row-value" id="row-city"></div>
+                  <div class="row-value" id="rowCity"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">班制</div>
-                  <div class="row-value" id="row-size"></div>
+                  <div class="row-value" id="rowSize"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">教法</div>
-                  <div class="row-value" id="row-teach"></div>
+                  <div class="row-value" id="rowTeach"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">天數</div>
-                  <div class="row-value" id="row-day"></div>
+                  <div class="row-value" id="rowDay"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">週時</div>
-                  <div class="row-value" id="row-time"></div>
+                  <div class="row-value" id="rowTime"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">技術</div>
-                  <div class="row-value" id="row-tech"></div>
+                  <div class="row-value" id="rowTech"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">信箱</div>
-                  <div class="row-value" id="row-mail"></div>
+                  <div class="row-value" id="rowMail"></div>
                 </div>
                 <div class="row">
                   <div class="row-name">電話</div>
-                  <div class="row-value" id="row-phone"></div>
+                  <div class="row-value" id="rowPhone"></div>
                 </div>
               </div>
             </div>
@@ -172,9 +172,9 @@
     <!-- 動畫區塊 -->
     <div id="top" class="top">
       <div class="top-div">
-        <a href="#"
-          ><img class="top-icon" src="../assets/images/FE_TOP.png"
-        /></a>
+        <a href="#">
+          <img class="top-icon" src="../assets/images/FE_TOP.png"  alt="動畫logo" />
+        </a>
       </div>
     </div>
     <div id="loadingDrawing" class="loading-drawing"></div>
@@ -192,10 +192,11 @@
           <img
             class="footer-icon"
             src="../assets/images/new-facebook-blue.svg"
+            alt="facebook-icon"
           />
         </a>
         <a href="https://line.me/ti/p/foaAfu3hPF">
-          <img class="footer-icon" src="../assets/images/FE_line.png" />
+          <img class="footer-icon" src="../assets/images/FE_line.png" alt="line-icon" />
         </a>
       </div>
     </footer>
@@ -211,7 +212,7 @@
             <input id="email" type="email" placeholder="Email" required>
             <input id="password" type="password" placeholder="******" required>
           </div>
-          <p class="forget-password">忘記密碼?</p>
+          <p class="forget-password" id="forgetPassword">忘記密碼?</p>
           <div class="login-btns">
             <div class="btn-group">
               <button  type="button" id="signup" class="login-btn">
@@ -239,15 +240,18 @@
     </div>
 
     <!-- aside -->
-    <!-- <aside
+    <aside
       id="my-aside"
-      style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
-      <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside> -->
+      <img id="my-aside-img" src="../assets/images/FE_test_go.png" alt="測驗功能" />
+    </aside>
+
+    <!-- Test Go -->
+    <div class="testgo-wrapper">
+    </div>
 
     <!-- 照片放大區塊 -->
-    <div class="enlarge-wrapper"></div>
+    <div id="enlargeWrapper" class="enlarge-wrapper"></div>
 
     <!-- 在 HTML 文件中直接引入 Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js">
@@ -257,7 +261,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
     
     <script src="../assets/js/settings.js"></script>
-    <script src="../assets/js/common.js"></script>
+    <script type="module" src="../assets/js/common.js"></script>
     <script type="module" src="../assets/js/content.js"></script>
   </body>
 </html>
