--- a/page1/part3/pages/profile.html
+++ b/page1/part3/pages/profile.html
@@ -31,13 +31,13 @@
           <p id="loginClick" class="nav-item">登入</p>
         </div>
         <div class="search-part">
-          <img id="Search" src="../assets/images/FE_search_green.png" />
+          <img id="Search" src="../assets/images/FE_search_green.png" alt="搜尋" />
         </div>
       </nav>
     </header>
 
     <!-- search- section -->
-    <div id="search-section" class="search-section">
+    <div id="searchSection" class="search-section">
       <div class="white-background">
         <p>SEARCH</p>
         <form action="" class="search-part">
@@ -56,16 +56,16 @@
       <section class="profile-two-wrapper">
         <div class="profile-two-container">
           <div class="user-group">
-            <button type="button" class="btn-user" id="profileP">個人資料</button>
-            <button type="button" class="btn-user" id="favoriteP">收藏</button>
-            <button type="button" class="btn-user" id="login-out">登出</button>
+            <button type="button" class="btn-user" id="profileBtn">個人資料</button>
+            <button type="button" class="btn-user" id="favoriteBtn">收藏</button>
+            <button type="button" class="btn-user" id="loginOutBtn">登出</button>
           </div>
-          <div class="user-wrapper">
+          <div id="userWrapper" class="user-wrapper">
             <!-- 個人資料  -->
-            <div class="user-container">
+            <div id="userContainer" class="user-container">
               <div class="user-avavtar">
                 <img
-                  id="profile-img"
+                  id="profileImg"
                   src="../assets/images/user-img.png"
                   alt="使用者頭像"
                 />
@@ -75,7 +75,7 @@
                   <label for="name">姓名</label>
                   <input
                     type="text"
-                    id="profile-name"
+                    id="profileName"
                     name="name"
                     placeholder="請輸入姓名"
                     disabled
@@ -85,7 +85,7 @@
                   <label for="phone">手機</label>
                   <input
                     type="text"
-                    id="profile-phone"
+                    id="profilePhone"
                     name="phone"
                     placeholder="請輸入手機"
                     disabled
@@ -95,32 +95,24 @@
                   <label for="email">信箱</label>
                   <input
                     type="email"
-                    id="profile-email"
+                    id="profileEmail"
                     name="email"
                     placeholder="請輸入信箱"
                     disabled
                   />
                 </div>
-                <div id="device-btn" class="change-data">修改資料</div>
+                <div id="deviceBtn" class="change-data">修改資料</div>
 
                 <!-- 確認 & 取消區塊 -->
-                <div class="device-group">
-                  <div id="confirm-btn" class="change-data">確認</div>
-                  <div id="cancel-btn" class="change-data">取消</div>
+                <div id="deviceGroup" class="device-group">
+                  <div id="confirmBtn" class="change-data">確認</div>
+                  <div id="cancelBtn" class="change-data">取消</div>
                 </div>
               </form>
             </div>
 
             <!-- 收藏列表 -->
-             <div class="favorite-container">
-              <!-- <div class="favorite-card">
-                <a href="./content.html?id=1539507974337">
-                  <img class="favorite-img" src="https://firebasestorage.googleapis.com/v0/b/front-enter.appspot.com/o/images%2Frotate-img-2.jpg?alt=media&token=f28dbea4-af0c-4743-a75a-426198fe409e" alt="收藏課程">
-                </a>
-                <p class="favorite-title">台大資訊系統訓練班</p>
-                <img class="favorite-delete" src="https://frankyeah.github.io/Front-Enter/images/rubbish-bin.svg" alt="刪除 icon">
-              </div> -->
-
+             <div id="favoriteContainer" class="favorite-container">
              </div>
           </div>
         </div>
@@ -130,9 +122,9 @@
     <!-- 動畫區塊 -->
     <div id="top" class="top">
       <div class="top-div">
-        <a href="#"
-          ><img class="top-icon" src="../assets/images/FE_TOP.png"
-        /></a>
+        <a href="#">
+          <img class="top-icon" src="../assets/images/FE_TOP.png"  alt="動畫logo"/>
+        </a>
       </div>
     </div>
     <div id="loadingDrawing" class="loading-drawing"></div>
@@ -150,10 +142,11 @@
           <img
             class="footer-icon"
             src="../assets/images/new-facebook-blue.svg"
+            alt="facebook-icon"
           />
         </a>
         <a href="https://line.me/ti/p/foaAfu3hPF">
-          <img class="footer-icon" src="../assets/images/FE_line.png" />
+          <img class="footer-icon" src="../assets/images/FE_line.png" alt="line-icon" />
         </a>
       </div>
     </footer>
@@ -174,7 +167,7 @@
               required
             />
           </div>
-          <p class="forget-password">忘記密碼?</p>
+          <p class="forget-password" id="forgetPassword">忘記密碼?</p>
           <div class="login-btns">
             <div class="btn-group">
               <button type="button" id="signup" class="login-btn">註冊</button>
@@ -196,12 +189,16 @@
     </div>
 
     <!-- aisde -->
-    <!-- <aside
+    <aside
       id="my-aside"
       style="animation: 0.9s ease 0s 1 alternate none running asiderunning"
     >
-      <img id="my-aside-img" src="../assets/images/FE_test_go.png" />
-    </aside> -->
+      <img id="my-aside-img" src="../assets/images/FE_test_go.png" alt="測驗功能" />
+    </aside>
+
+    <!-- Test Go -->
+    <div class="testgo-wrapper">
+    </div>
 
     <!-- JS載入 -->
     <!-- 在 HTML 文件中直接引入 Firebase SDK -->
@@ -211,7 +208,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-database-compat.js"></script>
 
     <script src="../assets/js/settings.js"></script>
-    <script src="../assets/js/common.js"></script>
+    <script type="module" src="../assets/js/common.js"></script>
     <script type="module" src="../assets/js/profile.js"></script>
   </body>
 </html>
